<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 ELAN e.V.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:StudIPApplication="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/send_feedback"
        android:icon="@drawable/ic_action_send"
        StudIPApplication:showAsAction="ifRoom|withText"
        android:title="@string/Send_message"
        android:titleCondensed="@string/Send"/>

</menu>