...
        android:paddingStart="@dimen/keyline_1"
        android:paddingRight="@dimen/keyline_1"
        android:paddingEnd="@dimen/keyline_1"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/feedback_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Message"
            android:inputType="textMultiLine"
            android:imeOptions="actionNext"
            android:minLines="3"/>
...
