<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 ELAN e.V.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<resources>

    <string name="app_name">StudIPApp</string>
    <string name="loading">laden</string>
    <string name="help">Hilfe</string>
    <string name="slidein_menu_button">SlideIn Menu Button</string>
    <string name="title_activity_course_view">CourseViewActivity</string>
    <string name="studip_logo">Studip Logo</string>
    <string name="Activities">Aktivitäten</string>
    <string name="News">Neuigkeiten</string>
    <string name="Courses">Kurse</string>
    <string name="Events">Veranstaltungen</string>
    <string name="Messages">Nachrichten</string>
    <string name="Contacts">Kontakte</string>
    <string name="Documents">Dateien</string>
    <string name="Settings">Einstellungen</string>
    <string name="Help">Hilfe</string>
    <string name="Information">Informationen</string>
    <string name="Logout">Abmelden</string>
    <string name="General">Allgemein</string>
    <string name="menu">Menü</string>
    <string name="Development">Entwicklung</string>
    <string name="Authorize">Autorisieren</string>
    <string name="upcoming_events">Anstehende Veranstaltungen</string>
    <string name="choose_server">Server wählen</string>
    <string name="appointments">Termine</string>
    <string name="attendees">Teilnehmer</string>
    <string name="no_data">Keine Daten</string>
    <string name="menu_item">Menüpunkt</string>
    <string name="file_icon">Datei Icon</string>
    <string name="user_image">Benutzeravatar</string>
    <string name="Overview">Übersicht</string>
    <string name="Global">Global</string>
    <string name="just_now">gerade eben</string>
    <string name="a_minute_ago">vor einer Minute</string>
    <string name="minutes_ago">vor %d Minuten</string>
    <string name="an_hour_ago">vor einer Stunde</string>
    <string name="hours_ago">vor %d Stunden"</string>
    <string name="yesterday">gestern</string>
    <string name="days_ago">vor %d Tagen</string>
    <string name="by">von</string>
    <string name="time_room">Zeit / Veranstaltunsort</string>
    <string name="Teacher">DozentIn</string>
    <string name="next_appointments">Nächste Termin</string>
    <string name="Tutor">TutorIn</string>
    <string name="Student">StudentIn</string>
    <string name="no_appointments">Keine Termine</string>
    <string name="Inbox">Eingang</string>
    <string name="Outbox">Ausgang</string>
    <string name="Compose">Erstellen</string>
    <string name="message_unread_icon">Nachricht nicht gelesen icon</string>
    <string name="Menu">Menü</string>
    <string name="mark_as_read">als gelesen markieren</string>
    <string name="read">gelesen</string>
    <string name="delete_message">Nachricht löschen</string>
    <string name="delete">löschen</string>
    <string name="forward_message">Nachricht weiterleiten</string>
    <string name="forward">weiterleiten</string>
    <string name="reply_message">Nachricht antworten</string>
    <string name="reply">antworten</string>
    <string name="message_marked_read">Nachricht als gelesen markiert</string>
    <string name="message_deleted">Nachricht gelöscht</string>
    <string name="Receiver">Empfänger</string>
    <string name="Subject">Betreff</string>
    <string name="original_message">Original Nachricht</string>
    <string name="message_forward_string">WG</string>
    <string name="message_reply_string">AW</string>
    <string name="Send">Senden</string>
    <string name="compose_message">Nachricht schreiben</string>
    <string name="message_sent">Nachricht versandt</string>
    <string name="internal_error">Interner Server Fehler</string>
    <string name="wrong_parameter">Falsche Parameter</string>
    <string name="receiver_not_found">Empfänger unbekannt</string>
    <string name="unknown_error">Unbekannter Fehler aufgetreten</string>
    <string name="something_went_wrong">Es ist ein Fehler aufgetreten</string>
    <string name="Favorites">Favoriten</string>
    <string name="Groups">Gruppen</string>
    <string name="All">Alle</string>
    <string name="sorry">Sorry!</string>
    <string name="no_groups">Du hast noch keine Gruppen erstellt!</string>
    <string name="no_contacts">Es sind keine Kontakte vorhanden!</string>
    <string name="no_favorites">Du hast noch keine Favoriten markiert!</string>
    <string name="no_global_news">Keine Neuigkeiten von Stud.IP vorhanden.</string>
    <string name="no_course_news">Nichts Neues bei den Kursen.</string>
    <string name="no_attendees">Es sind keine Teilnehmer vorhanden.</string>
    <string name="no_documents">Es wurden noch keine Dokumente hochgeladen.</string>
    <string name="no_messages">Du hast keine Nachrichten!</string>
    <string name="no_courses">Du bist in keinem Kurs eingetragen.</string>
    <string name="studip_app_contacts_favorites">StudipApp Favoriten</string>
    <string name="Add_to_favorites">Favorit hinzufügen/entfernen</string>
    <string name="Remove_from_favorites">Favorit entfernen</string>
    <string name="Remove_from_contacts">Als Kontakt entfernen</string>
    <string name="Add_to_group">Zu Gruppe hinzufügen</string>
    <string name="choose_group">Gruppe wählen</string>
    <string name="Remove_from_group">Aus Gruppe entfernen</string>

</resources>