<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/message_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textIsSelectable="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_sender_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_subject"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_sender_and_date"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textIsSelectable="true" />

</RelativeLayout>