...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true">

    <TextView
        android:id="@+id/text1"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/keyline_2_minus_56dp"
        android:layout_marginStart="@dimen/keyline_2_minus_56dp"
...
        android:maxLines="1"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_medium"
        tools:text="@string/lipsum_short"/>

    <TextView
        android:id="@+id/text2"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_2_minus_56dp"
        android:layout_marginStart="@dimen/keyline_2_minus_56dp"
        android:layout_marginRight="@dimen/keyline_1"
...
