<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/send_icon"
        android:icon="@drawable/ic_action_send"
        android:showAsAction="ifRoom|withText"
        android:title="@string/Send">
    </item>

</menu>